--- a/hanoi.html
+++ b/hanoi.html
@@ -3,14 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <style>
-      div{width: 250px; height: 500px; padding: 10px; margin: 15px; float : left; text-align: center;}
-      #div1{border : 1px solid red;}
-      #div2{border : 1px solid green;}
-      #div3{border : 1px solid blue;}
-      #focus{border : 1px solid yellow;}
-      p{height : 8px;}
-    </style>
+    <link rel="stylesheet" href="style.css">
     <script>
     </script>
   </head>
@@ -26,120 +19,6 @@
     <div id="div3">
       <p id="p3"></p>
     </div>
-    <script>
-      var p1 = document.getElementById("p1");
-      var p2 = document.getElementById("p2");
-      var p3 = document.getElementById("p3");
-      var div1 = document.getElementById("div1");
-      var div2 = document.getElementById("div2");
-      var div3 = document.getElementById("div3");
-      var diva1, diva2, diva3;
-      div1.addEventListener('click',focus1)
-      div2.addEventListener('click',focus2)
-      div3.addEventListener('click',focus3)
-      var btn = document.getElementById("btn");
-      btn.addEventListener('click',Re)
-      var focused = 0;
-
-      function Re(){
-        focused = 0;
-        diva1 = new Array();
-        diva2 = new Array();
-        diva3 = new Array();
-        diva1.push("🟥🟥🟥🟥🟥🟥🟥🟥🟥🟥");
-        diva1.push("🟨🟨🟨🟨🟨🟨🟨🟨")
-        diva1.push("🟩🟩🟩🟩🟩🟩")
-        diva1.push("🟦🟦🟦🟦")
-        diva1.push("🟪🟪🟪")
-        diva1.push("⬛️")
-        update();
-      }
-
-      function focus1(){
-        if(focused == 0){
-          div1.id = "focus"
-          focused = 1
-        }else{
-          if(focused == 2){
-            diva1.push(diva2.pop())
-          }
-          else if(focused == 3){
-            diva1.push(diva3.pop())
-          }
-          update()
-        }
-      }
-      function focus2(){
-        if(focused == 0){
-          div2.id = "focus"
-          focused = 2
-        }else{
-          if(focused == 1){
-            diva2.push(diva1.pop())
-          }
-          else if(focused == 3){
-            diva2.push(diva3.pop())
-          }
-          update()
-        }
-      }
-      function focus3(){
-        if(focused == 0){
-          div3.id = "focus"
-          focused = 3
-        }else{
-          if(focused == 2){
-            diva3.push(diva2.pop())
-          }
-          else if(focused == 1){
-            diva3.push(diva1.pop())
-          }
-          update()
-        }
-      }
-
-      function update(){
-        div1.id = "div1"
-        div2.id = "div2"
-        div3.id = "div3"
-        focused = 0
-
-        for(let i = 0; i < diva1.length; i++) {
-            if(diva1[i] === undefined)  {
-              diva1.splice(i, 1);
-              i--;
-            }
-          }
-        for(let i = 0; i < diva2.length; i++) {
-          if(diva2[i] === undefined)  {
-            diva2.splice(i, 1);
-            i--;
-          }
-        }
-        for(let i = 0; i < diva3.length; i++) {
-          if(diva3[i] === undefined)  {
-            diva3.splice(i, 1);
-            i--;
-          }
-        }
-
-        p1.innerHTML = diva1.join("<br>")
-        p2.innerHTML = diva2.join("<br>")
-        p3.innerHTML = diva3.join("<br>")
-
-        if(diva1[0] == null || undefined){
-          p1.innerHTML = "first"
-        }
-        if(diva2[0] == null || undefined){
-          p2.innerHTML = "second"
-        }
-        if(diva3[0] == null || undefined){
-          p3.innerHTML = "third"
-        }
-
-        }
-
-      window.onload = Re;
-    </script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html> 
